--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -109,6 +109,7 @@
   "common": {
     "connexion_label": "Se connecter",
     "register_label": "S'inscrire",
+    "continue": "Continuer",
     "form": {
       "hide_password": "Masquer le mot de passe",
       "show_password": "Afficher le mot de passe",
@@ -502,6 +503,8 @@
     "social_connect": "Je m’inscris avec",
     "or": "ou",
     "subtitle": "Je m'inscris avec ce formulaire",
+    "step1_title": "S'inscrire par email",
+    "step2_title": "Terminer mon inscription",
     "login_title": "J‘ai déjà un compte.",
     "login_link": "Connexion",
     "gtu_text_first": "En vous inscrivant, vous acceptez nos ",
