--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -97,6 +97,13 @@
   "common": {
     "connexion_label": "Anmelden",
     "register_label": "Registrieren",
+    "continue": "Weitermachen",
+    "social_login": {
+      "card_title": "So finden Sie Ihr Abstimmungsverhalten",
+      "facebook_connect": "Mit Facebook fortfahren",
+      "google_connect": "Mit Google fortfahren",
+      "email_register": "Registrieren bei Mail"
+    },
     "form": {
       "hide_password": "Passwort ausblenden",
       "show_password": "Passwort anzeigen",
@@ -447,6 +454,8 @@
     "social_connect": "Ich registriere mich über",
     "or": "oder",
     "subtitle": "Ich registriere mich über dieses Formular",
+    "step1_title": "Per E-Mail abonnieren",
+    "step2_title": "Meine Registrierung abschließen",
     "login_title": "Ich habe bereits ein Konto.",
     "login_link": "Anmelden",
     "gtu_text_first": "Mit der Registrierung erklärst du dich mit unseren {{gtu_link}} ",
