--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -112,6 +112,7 @@
   "common": {
     "connexion_label": "Log in",
     "register_label": "Sign up",
+    "continue": "Continue",
     "form": {
       "hide_password": "Hide password",
       "show_password": "Show password",
@@ -415,6 +416,8 @@
     "social_connect": "Sign up with",
     "or": "or",
     "subtitle": "Sign up using this form",
+    "step1_title": "Subscribe by email",
+    "step2_title": "Complete my registration",
     "login_title": "I already have an account.",
     "login_link": "Log in",
     "gtu_text_first": "By signing up, you agree to our ",
