fix(widget): styles ajustments

--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -330,7 +330,7 @@
     "register": {
       "description": "Comment suivre les résultats ?",
       "button_intro": "Créez votre",
-      "button_text": "Inscrivez-vous sur Make.org"
+      "button_text": "espace citoyen."
     }
   },
   "no_proposal_card": {
