--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -176,7 +176,9 @@
       "card_title": "To find the history of your votes",
       "facebook_connect": "Continue with Facebook",
       "google_connect": "Continue with Google",
-      "email_register": "Sign up with email"
+      "email_register": "Sign up with email",
+      "count_register": "({{count}}/2)"
+
     },
     "from": "on",
     "email": "Email",
@@ -336,7 +338,8 @@
       "button_back": "Modify my solution",
       "title": "To validate my solution",
       "subtitle": "Sign up with",
-      "button_login": "I already have an account, log me in"
+      "button_login_text": "I already have an account,",
+      "button_login_link": "log me in"
     }
   },
   "vote": {
