--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -102,7 +102,8 @@
       "card_title": "So finden Sie Ihr Abstimmungsverhalten",
       "facebook_connect": "Mit Facebook fortfahren",
       "google_connect": "Mit Google fortfahren",
-      "email_register": "Registrieren bei Mail"
+      "email_register": "Registrieren bei Mail",
+      "count_register": "({{count}}/2)"
     },
     "form": {
       "hide_password": "Passwort ausblenden",
@@ -363,13 +364,16 @@
       "panel_trigger": "Ich mache einen Vorschlag",
       "button_cancel": "Abbrechen",
       "button_submit": "Bestätigen",
-      "moderation_link": "Lesen Sie unsere Moderationscharta"
+      "read_our": "Lesen Sie unsere",
+      "moderation_link": "Moderationscharta"
     },
     "authentication": {
       "button_back": "Meinen Vorschlag ändern",
       "title": "Um meinen Vorschlag zu bestätigen,",
       "subtitle": "registriere ich mich über",
-      "button_login": "Ich habe bereits ein Konto und melde mich an"
+      "button_login_text": "Ich habe bereits ein Konto",
+      "button_login_link": "und melde mich an"
+
     },
     "success": {
       "title": "Danke, {{name}}!",
