feat(global): update tracking for filters and widget

--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -1204,9 +1204,9 @@
     "controversial_title": "Most controversial solutions"
   },
   "special_final_card": {
-    "title": "Thank you for voting !",
-    "subtitle": "You can continue to participate in the consultation.",
-    "cta_text": "Access the consultation"
+    "title": "Thank you for reacting to the solutions !",
+    "subtitle": "How to follow the results ?",
+    "cta_text": "Register on Make.org"
   },
   "no_proposal_card": {
     "title": {
