--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -411,7 +411,8 @@
       "title": "Pour valider ma proposition",
       "subtitle": "Je m'inscris avec",
       "button_login_text": "J’ai déjà un compte,",
-      "button_login_link": "je me connecte"
+      "button_login_link": "je me connecte",
+      "back_authentication": "Revenir à l'écran de connexion"
     },
     "success": {
       "title": "Merci {{name}} !",
@@ -512,9 +513,9 @@
     "parental_consent": "En tant que titulaire de l'autorité parentale, je consens au traitement des données personnelles de mon enfant par Make.org.",
     "cancel": "Annuler",
     "submit": "Valider",
-    "privacy_policy_text": "J'accepte la ",
-    "privacy_policy": "politique de données",
-    "privacy_make": " de Make.org"
+    "privacy_policy_first_part": "J'accepte que Make.org traite ces données pour que je puisse participer et être informé(e) des résultats selon la ",
+    "privacy_policy_link": "Charte",
+    "privacy_policy_last_part": "."
   },
   "forgot_password": {
     "title": "Je réinitialise mon mot de passe",
