--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -349,7 +349,7 @@
     "sharing": "Ou donnez plus de portée à cette consultation en la diffusant."
   },
   "push_proposal_card": {
-    "title": "Et vous, avez vous une solution à proposer sur ce sujet ?",
+    "title": "Et vous, avez-vous une solution à proposer sur ce sujet ?",
     "next-cta": "Pas encore, je continue à voter"
   },
   "sequence_progress": {
@@ -524,7 +524,7 @@
     "cancel": "Annuler",
     "submit": "Valider",
     "privacy_policy_first_part": "J'accepte que Make.org traite ces données pour que je puisse participer et être informé(e) des résultats selon la ",
-    "privacy_policy_link": "Charte",
+    "privacy_policy_link": "charte",
     "privacy_policy_last_part": "."
   },
   "forgot_password": {
