--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -339,7 +339,7 @@
     "sharing": "Ou donnez plus de portée à cette consultation en la diffusant."
   },
   "push_proposal_card": {
-    "title": "Et vous, avez vous une solution à proposer sur ce sujet ?",
+    "title": "Et vous, avez-vous une solution à proposer sur ce sujet ?",
     "next-cta": "Pas encore, je continue à voter"
   },
   "sequence_progress": {
@@ -514,7 +514,7 @@
     "cancel": "Annuler",
     "submit": "Valider",
     "privacy_policy_first_part": "J'accepte que Make.org traite ces données pour que je puisse participer et être informé(e) des résultats selon la ",
-    "privacy_policy_link": "Charte",
+    "privacy_policy_link": "charte",
     "privacy_policy_last_part": "."
   },
   "forgot_password": {
@@ -1267,7 +1267,7 @@
   },
   "unsecure": {
     "title": "La consultation est maintenant terminée",
-    "description": "Vous souhaitez en savoir plus sur ce sujet ? Découvrez la suite de l'opération et restez informé de toutes nos consultations citoyennes en vous inscrivant sur Make.org",
+    "description": "Vous souhaitez en savoir plus sur ce sujet ? Découvrez la suite de l'opération et restez informé(e) de toutes nos consultations citoyennes en vous inscrivant sur Make.org",
     "link": "Découvrir notre opération"
   }
 }
