--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -432,10 +432,10 @@
     "times": "mal",
     "likeIt": "Favorit",
     "doable": "Machbar",
-    "platitudeAgree": "Unbedeutend",
+    "platitudeAgree": "Nebensächlich",
     "noWay": "Auf keinen Fall!",
     "impossible": "Nicht machbar",
-    "platitudeDisagree": "Unbedeutend",
+    "platitudeDisagree": "Nebensächlich",
     "doNotUnderstand": "Nicht verstanden",
     "noOpinion": "Keine Meinung",
     "doNotCare": "Gleichgültig"
