--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -840,8 +840,7 @@
       "controversial": "Controversées",
       "unvoted": "Celles qui attendent votre vote",
       "organisations_proposals": "Proposées par des organisations",
-      "no_proposal": "Aucune proposition",
-      "display_proposals": "Afficher les propositions"
+      "no_proposal": "Aucune proposition"
     },
     "tabs": {
       "consultation": " Consultation ",
