--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -371,38 +371,7 @@
     "submit_mobile": "Enregistrer",
     "submit_desktop": "Enregistrer et continuer",
     "submitted_thanks": "Merci pour votre réponse.",
-    "submitted_disclaimer": " Elle sera utilisée de façon anonyme pour analyser les résultats de la consultation.",
-    "age": {
-      "title": "Quelle est votre tranche d’âge ?"
-    },
-    "gender": {
-      "title": "Quel est votre genre ?",
-      "male": "Homme",
-      "female": "Femme",
-      "other": "Non-binaire"
-    },
-    "region": {
-      "title": "Quelle est votre région ?",
-      "select": "Sélectionner",
-      "FR-ARA": "Auvergne-Rhône-Alpes",
-      "FR-BFC": "Bourgogne-Franche-Comté",
-      "FR-BRE": "Bretagne",
-      "FR-CVL": "Centre-Val de Loire",
-      "FR-COR": "Corse",
-      "FR-GES": "Grand Est",
-      "FR-HDF": "Hauts-de-France",
-      "FR-IDF": "Île-de-France",
-      "FR-NOR": "Normandie",
-      "FR-NAQ": "Nouvelle-Aquitaine",
-      "FR-OCC": "Occitanie",
-      "FR-PDL": "Pays de la Loire",
-      "FR-PAC": "Provence-Alpes-Côte d'Azur",  
-      "FR-GUA": "Guadeloupe",
-      "FR-GUF": "Guyane",
-      "FR-MTQ": "Martinique",
-      "FR-LRE": "La Réunion",
-      "FR-MAY": "Mayotte"
-    }
+    "submitted_disclaimer": " Elle sera utilisée de façon anonyme pour analyser les résultats de la consultation."
   },
   "proposal_submit": {
     "form": {
