feat(global): adding filters and sort modal on mobile

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -824,7 +824,14 @@
       "title": "Vorschläge entdecken",
       "description": "Nutze die Suchfunktionen, um alle Vorschläge der Konsultation zu entdecken und äußere dich zu denjenigen, die dich interessieren.",
       "reset_filters": "Filter löschen",
+      "reset_filters_and_close": "Filter zurücksetzen und schließen",
+      "sort": "Sortieren",
+      "sort_continue": "Fortfahren mit der Sortierung",
+      "filters_continue": "Mit diesen Filtern weitermachen",
+      "filter": "Filter",
+      "filter_and_close": "Filtern und schließen",
       "sort_by": "Sortieren nach",
+      "sort_and_close": "Sortieren und schließen",
       "filter_by": "Filtern nach",
       "recent": "Neueste",
       "popular": "Beliebteste",
