--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -683,8 +683,14 @@
       "title": "Explore solutions",
       "description": "Use the search tools to easily explore the solutions submitted during the consultation and vote on those you deem interesting.",
       "reset_filters": "Clear filters",
+      "reset_filters_and_close": "Clear filter and close",
+      "sort": "Sort",
+      "sort_continue": "Continue by applying a sort",
+      "filters_continue": "Continue by applying the filters",
       "sort_by": "Sort by",
+      "sort_and_close": "Sort and close",
       "filter": "Filter",
+      "filter_and_close": "Filter and close",
       "filter_by": "Filter by",
       "recent": "Recent",
       "popular": "Popular",
