--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -833,8 +833,14 @@
       "title": "Explorer les propositions",
       "description": "Utilisez les outils de recherche pour parcourir simplement toutes les propositions de la consultation et identifier celles qui vous semblent prioritaires.",
       "reset_filters": "Réinitialiser les filtres",
+      "reset_filters_and_close": "Réinitialiser les filtres et fermer",
+      "sort": "Trier",
+      "sort_continue": "Continuer en appliquant le tri",
+      "filters_continue": "Continuer en appliquant les filtres",
       "sort_by": "Trier par",
+      "sort_and_close": "Trier et fermer",
       "filter": "Filtrer",
+      "filter_and_close": "Filtrer et fermer",
       "filter_by": "Filtrer par",
       "recent": "Récentes",
       "popular": "Populaires",
