--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -368,8 +368,7 @@
   "demographics_card": {
     "disclaimer": "Vos informations sont anonymes et permettent à nos résultats d'être représentatifs.",
     "skip": "Passer",
-    "submit_mobile": "Enregistrer",
-    "submit_desktop": "Enregistrer et continuer",
+    "submit": "Enregistrer",
     "submitted_thanks": "Merci pour votre réponse.",
     "submitted_disclaimer": " Elle sera utilisée de façon anonyme pour analyser les résultats de la consultation.",
     "select": "Sélectionner"
