--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -926,7 +926,7 @@
       },
       "proposals": {
         "controversials_title": "Die umstrittensten Vorschläge",
-        "controversials_description": "Die umstrittenen Vorschläge spiegeln eine große Spaltung der Gesellschaft wider: Sie werden insgesamt sowohl stark unterstützt als auch klar abgelehnt.",
+        "controversials_description": "Die umstrittensten Vorschläge spiegeln eine große Spaltung der Gesellschaft wider: Sie werden insgesamt sowohl stark unterstützt als auch klar abgelehnt.",
         "rejected": "Die am meisten abgelehnten Vorschläge",
         "rejected_results": "{{disagree}} % dagegen, davon {{no_way}} % auf keinen Fall",
         "controversials_agree": "{{count}} % dafür",
